# Taskline-BE

./: .env  Cargo.toml
src/: ai_endpoints.rs  app_state.rs  auth.rs  board.rs  calendar.rs  chat.rs  chat_db.rs  chat_server.rs  config.rs  dashboard_data.rs  knowledge_base.rs  main.rs  project.rs  team_management.rs  ticket.rs  user_management.rs  web_socket_server.rs
src/models/: message.rs  mod.rs  task.rs  team.rs  user.rs
