[package]
name = "InstantMessaging"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-cors = "0.7.0"
actix-web-actors = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15"
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "compat-3-0-0"] }
futures-util = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
jsonwebtoken = "8"
dotenv = "0.15.0"
futures = "0.3.31"
regex = "1.10.6"
